--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+        "@react-pdf/renderer": "^4.3.2",
+    "date-fns": "^4.1.0",
+    "firebase": "^12.8.0",
+    "framer-motion": "^12.31.0",
+    "lucide-react": "^0.563.0",
+    "next": "16.1.6",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-firebase-hooks": "^5.1.1",
+
+
     "@fontsource/amiri": "^5.2.8",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
-    "firebase": "^12.4.0",
-    "framer-motion": "^12.23.24",
     "mongodb": "^6.20.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "three": "^0.180.0"
   },
